--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNAccountInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNAccountInputView.xib
@@ -26,7 +26,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名或者手机号码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl">
-                    <rect key="frame" x="0.0" y="58.5" width="376" height="19.5"/>
+                    <rect key="frame" x="0.0" y="48" width="376" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="kEs-ji-DYd"/>
+                    </constraints>
                     <color key="textColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
@@ -34,9 +37,9 @@
                         <outlet property="delegate" destination="-1" id="kAY-jw-DJs"/>
                     </connections>
                 </textField>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-lO-mIA">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-lO-mIA" customClass="CNLineView">
                     <rect key="frame" x="0.0" y="88" width="376" height="1"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="ZDj-E6-f4n"/>
                     </constraints>
