--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
@@ -9,6 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CNCodeInputView">
             <connections>
+                <outlet property="codeBtn" destination="zNf-wj-JDq" id="fQm-oA-Z24"/>
+                <outlet property="eyeBtn" destination="ZzN-sK-jsu" id="iAI-xb-yf3"/>
                 <outlet property="inputTF" destination="ZI9-1o-5Rl" id="imX-SE-Jc4"/>
                 <outlet property="lineView" destination="cfA-lO-mIA" id="ggu-GY-kcb"/>
                 <outlet property="tipLb" destination="lgT-N8-sqa" id="Zom-lZ-qpi"/>
@@ -20,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgT-N8-sqa">
-                    <rect key="frame" x="0.0" y="23" width="0.0" height="0.0"/>
+                    <rect key="frame" x="0.0" y="20" width="0.0" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -34,7 +36,7 @@
                         <outlet property="delegate" destination="-1" id="kAY-jw-DJs"/>
                     </connections>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-wj-JDq">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-wj-JDq">
                     <rect key="frame" x="288" y="48" width="88" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="88" id="XIK-Mj-6In"/>
@@ -43,10 +45,17 @@
                     <state key="normal" title="发送验证码">
                         <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="sendCode:" destination="-1" eventType="touchUpInside" id="uem-8u-b8Y"/>
+                    </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzN-sK-jsu">
-                    <rect key="frame" x="354" y="52" width="22" height="22"/>
-                    <state key="normal" image="mute.png"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzN-sK-jsu">
+                    <rect key="frame" x="346" y="48" width="30" height="30"/>
+                    <state key="normal" image="l_password_s"/>
+                    <state key="selected" image="l_password"/>
+                    <connections>
+                        <action selector="secretInput:" destination="-1" eventType="touchUpInside" id="ayB-ih-wlI"/>
+                    </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfA-lO-mIA" customClass="CNLineView">
                     <rect key="frame" x="0.0" y="88" width="376" height="1"/>
@@ -69,7 +78,7 @@
                 <constraint firstItem="ZzN-sK-jsu" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="Z6Q-kZ-6W0"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="ZI9-1o-5Rl" secondAttribute="bottom" constant="10" id="bg9-iv-iOv"/>
                 <constraint firstAttribute="trailing" secondItem="ZzN-sK-jsu" secondAttribute="trailing" id="leF-9U-HTH"/>
-                <constraint firstItem="lgT-N8-sqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="23" id="mGc-uV-Jo3"/>
+                <constraint firstItem="lgT-N8-sqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="mGc-uV-Jo3"/>
                 <constraint firstItem="ZI9-1o-5Rl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="voB-f1-Kvo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -77,6 +86,7 @@
         </view>
     </objects>
     <resources>
-        <image name="mute.png" width="22" height="20"/>
+        <image name="l_password" width="30" height="30"/>
+        <image name="l_password_s" width="30" height="30"/>
     </resources>
 </document>
