--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNImageCodeInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNImageCodeInputView.xib
@@ -20,15 +20,15 @@
             <rect key="frame" x="0.0" y="0.0" width="376" height="89"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgT-N8-sqa">
-                    <rect key="frame" x="15" y="16" width="0.0" height="0.0"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入右图中的字母*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgT-N8-sqa">
+                    <rect key="frame" x="0.0" y="20" width="116" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入右图中的字母" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl">
                     <rect key="frame" x="0.0" y="42" width="266" height="36"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
@@ -64,13 +64,13 @@
             <constraints>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="IUL-zM-dO7" secondAttribute="bottom" constant="10" id="5p9-AP-N22"/>
                 <constraint firstAttribute="trailing" secondItem="IUL-zM-dO7" secondAttribute="trailing" id="8nd-AG-USm"/>
-                <constraint firstItem="lgT-N8-sqa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="Ani-bP-Ewx"/>
+                <constraint firstItem="lgT-N8-sqa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ani-bP-Ewx"/>
                 <constraint firstAttribute="bottom" secondItem="cfA-lO-mIA" secondAttribute="bottom" id="FZe-Wb-KzL"/>
                 <constraint firstAttribute="trailing" secondItem="cfA-lO-mIA" secondAttribute="trailing" id="JrN-y6-K03"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="PUW-J7-95K"/>
                 <constraint firstItem="IUL-zM-dO7" firstAttribute="leading" secondItem="ZI9-1o-5Rl" secondAttribute="trailing" constant="20" id="Zdd-8K-KWm"/>
                 <constraint firstItem="IUL-zM-dO7" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="hN6-bg-k4M"/>
-                <constraint firstItem="lgT-N8-sqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="mGc-uV-Jo3"/>
+                <constraint firstItem="lgT-N8-sqa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="mGc-uV-Jo3"/>
                 <constraint firstItem="ZI9-1o-5Rl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="voB-f1-Kvo"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="ZI9-1o-5Rl" secondAttribute="bottom" constant="10" id="xB2-oF-xlq"/>
             </constraints>
