--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNAccountInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNAccountInputView.xib
@@ -25,7 +25,7 @@
                     <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名或者手机号码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名或者手机号码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl" customClass="CNBaseTF">
                     <rect key="frame" x="0.0" y="48" width="376" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="kEs-ji-DYd"/>
