--- a/HYNewNest/Features(主代码)/MeComponent/View/CNRecordTypeSelectorView.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/View/CNRecordTypeSelectorView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="bottom" destination="Vdi-Wj-HmU" id="3He-a5-Or2"/>
                 <outlet property="submitBtn" destination="Um1-vj-t9Z" id="6R5-LZ-fPT"/>
+                <outlet property="withdrawBtn" destination="Wtk-tw-fOw" id="Rim-7O-qxl"/>
                 <outletCollection property="typeBtnArray" destination="9Cp-NA-xA4" id="2FO-6g-vRB"/>
                 <outletCollection property="typeBtnArray" destination="Wtk-tw-fOw" id="iXh-Fw-VU3"/>
                 <outletCollection property="typeBtnArray" destination="psL-Nu-rkq" id="zcK-k9-tK8"/>
